# testbuildopenglqt

./: README.md  main.cpp  meson.build  trainigkeyboard  trkbd.cpp  trkbd.hpp
.ccls-cache/@@home@jimmy@dev@trainingkeyboard@trainingkeyboard/: @usr@include@GL@gl.h.blob  @usr@include@GL@glext.h.blob  @usr@include@KHR@khrplatform.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm@errno.h.blob  @usr@include@assert.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  @usr@include@bits@fp-logb.h.blob  @usr@include@bits@iscanonical.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@libm-simd-decl-stubs.h.blob  @usr@include@bits@local_lim.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@math-vector.h.blob  @usr@include@bits@mathcalls-helper-functions.h.blob  @usr@include@bits@mathcalls-narrow.h.blob  @usr@include@bits@mathcalls.h.blob  @usr@include@bits@posix1_lim.h.blob  @usr@include@bits@posix2_lim.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@sched.h.blob  (+398 more)
bbuild/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  libGL.so.1  libGLX.so.0  libGLdispatch.so.0  libfreetype.so.6  trainingkeyboard
(+13 files in other folders)
